# depthviz

./: .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  dive-computer-support-request.md  donate-my-dive.md  feature_request.md
.github/workflows/: deploy.yaml
assets/: manual-input-example.csv
depthviz/: core.py  csv_parser.py
depthviz/tests/: test_core.py  test_csv_parser.py  test_main_entrypoint.py
depthviz/tests/data/: invalid_data_x_depth.csv
docs/: GARMIN.md
src/depthviz/: __main__.py  __version__.py  _version.py  banner.py  core.py  csv_parser.py  main.py  main_cli.py
src/depthviz/optimizer/: linear_interpolation.py
src/depthviz/video/: depth.py  logger.py  time.py  video_creator.py
tests/: test_apnealizer_csv_parser.py  test_core.py  test_csv_parser.py  test_garmin_fit_parser.py  test_generic_divelog_parser.py  test_linear_interpolation.py  test_logger.py  test_main.py  test_main_cli.py  test_main_entrypoint.py  test_manual_mode_csv_parser.py  test_package_entrypoint.py  test_shearwater_xml_parser.py  test_suunto_fit_parser.py  test_video_depth.py  test_video_logger.py  test_video_time.py
tests/data/: valid_depth_data_trimmed.csv
tests/data/apnealizer/: invalid_data_x_header.csv  invalid_time_depth_mismatched.csv
tests/data/garmin/: 11211432883_ACTIVITY.fit  14087156326_ACTIVITY.fit  18478819822_ACTIVITY.fit
tests/data/manual/: invalid_data_negative_depth.csv  invalid_data_negative_time.csv  invalid_data_x_depth.csv  invalid_data_x_header.csv  invalid_time_depth_mismatched.csv  valid_depth_data_trimmed.csv
tests/data/shearwater/: invalid_data_x_element_depth.xml  invalid_data_x_element_divelog.xml  invalid_data_x_element_divelog_records.xml  invalid_data_x_element_root.xml  invalid_data_x_element_start_surface_pressure.xml  invalid_data_x_element_time.xml  invalid_data_x_value_depth.xml  invalid_data_x_value_start_surface_pressure.xml  invalid_data_x_value_time.xml  valid_depth_data_oc_tec_trimmed.xml  (+1 more)
(+10 files in other folders)
