[tool.poetry]
name = "depthviz"
version = "0.1.0"
description = ""
authors = ["Noppanut Ploywong <noppanut15@hotmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
moviepy = "2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
mypy = "1.14.1"
ruff = "^0.8.4"
interrogate = "1.7.0"
coverage = "7.6.10"
pytest-cov = "^6.0.0"

[tool.ruff]
exclude = [
    "dist",
    "build",
    "env",
    "venv",
    ".env",
    ".venv",
    ".tox",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    ".ruff",
]

[[tool.mypy.overrides]]
module = ["moviepy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["depthviz/tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
